--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <header>
         <p>pest control website</p>
+        <img src="#" alt="Empty image placeholder">
     </header>
 </html>
